--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -8,7 +8,8 @@
 
 {{ define "main" }}
 <div class="doc" id='list_page'>
-  <div class="container">
+  {{ partial "pre-loading/3-column-layout.html" }}
+  <div class="container content-container" style="display: none;">
     <div class="sidebar">
       <div class="sticky-sidebar">
         <h2 class="title"> 文档 </h2>
