--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -9,7 +9,8 @@
 
 {{ define "main" }}
 <div class="doc">
-  <div class="container">
+  {{ partial "pre-loading/3-column-layout.html" }}
+  <div class="container content-container" style="display: none;">
     <div class="sidebar">
       <div class="sticky-sidebar">
         <h2 class="title"> 文档 </h2>
