--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -9,31 +9,31 @@
 
 {{ define "main" }}
 <div class="doc">
-  <div class="container">
+  {{ partial "pre-loading/3-column-layout.html" }}
+  <div class="container content-container" style="display: none;">
     <div class="sidebar">
       <div class="sticky-sidebar">
         <h2 class="title"> Document </h2>
-        <div class="st_tree nav-toc" style="display: none;">
+        <div class="st_tree nav-toc">
           {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_toc "global" .) }}
         </div>
       </div>
     </div>
 
     <div class="archive">
-        <div class="content markdown-body">
-          {{ .Content }}
-        </div>
-        <div class="article-toc"></div>
-
-        {{ partial "archives/operate-links.html" (dict "global" .) }}
-
-         {{ .GitInfo }}
+      <div class="content markdown-body">
+        {{ .Content }}
+      </div>
+      <div class="article-toc"></div>
+      {{ partial "archives/operate-links.html" (dict "global" .) }}
     </div>
 
-    <div class="sidebar-page sticky-sidebar">
-      {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
-      <p class="toc-title">What’s on this page</p>
-      <div id="smarttoc_wrapper"></div>
+    <div class="sidebar-page">
+      <div class="sticky-sidebar">
+        {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
+        <p class="toc-title">What’s on this page</p>
+        <div id="smarttoc_wrapper"></div>
+      </div>
     </div>
   </div>
 </div>
