--- a/layouts/meetup/archive.html
+++ b/layouts/meetup/archive.html
@@ -9,10 +9,11 @@
 {{ define "main" }}
 {{ $posts := where (where .Site.Pages "Section" "meetup") ".Params.title" "!=" nil  }}
 <div class="meetup">
-    <div class="container">
-        {{ partial "navs/tags-nav.html" (dict "title" "Popular Tags" "posts" $posts "global" .) }}
-        {{ partial "list.html" (dict "posts" $posts.ByDate.Reverse "hasMetaData" "true" "hasBrief" "true" "global" .) }}
-    </div>
+  {{ partial "pre-loading/2-column-layout.html" }}
+  <div class="container content-container" style="display: none;">
+    {{ partial "navs/tags-nav.html" (dict "title" "Popular Tags" "posts" $posts "global" .) }}
+    {{ partial "list.html" (dict "posts" $posts.ByDate.Reverse "hasMetaData" "true" "hasBrief" "true" "global" .) }}
+  </div>
 </div>
 
 {{ end }}
