--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -6,7 +6,8 @@
 
 {{ define "main" }}
 <div class="meetup">
-  <div class="container">
+  {{ partial "pre-loading/2-column-layout.html" }}
+  <div class="container content-container" style="display: none;">
   <!-- categore: memoir/ record -->
   {{ $blogs := where (where .Site.Pages "Section" "meetup") ".Params.title" "!=" nil }}
   {{ partial "navs/date-tree-nav.html" (dict "title" "Meetup" "data" $blogs ) }}
