--- a/layouts/recruit-cn/single.html
+++ b/layouts/recruit-cn/single.html
@@ -6,7 +6,8 @@
 
 {{ define "main" }}
 <div class="recruit">
-  <div class="container">
+  {{ partial "pre-loading/2-column-layout.html" }}
+  <div class="container content-container" style="display: none;">
     <div class="sidebar">
       <div class="sticky-sidebar">
         <h2 class="title"> 招聘职位 </h2>
