--- a/layouts/weekly/list.html
+++ b/layouts/weekly/list.html
@@ -8,29 +8,30 @@
 
 {{ define "main" }}
 <div class="weekly" id='list_page'>
-    <div class="container">
-      {{ $archives := where ( where .Site.Pages "Section" "weekly" ) ".Params.title" "!=" nil }}
-      {{ partial "navs/date-tree-nav.html" (dict "data" $archives "title" "Weekly" "rss" "/weekly/index.xml") }}
+  {{ partial "pre-loading/2-column-layout.html" }}
+  <div class="container content-container" style="display: none;">
+    {{ $archives := where ( where .Site.Pages "Section" "weekly" ) ".Params.title" "!=" nil }}
+    {{ partial "navs/date-tree-nav.html" (dict "data" $archives "title" "Weekly" "rss" "/weekly/index.xml") }}
 
-        <div class="archive">
-          {{ range first 1 .Data.Pages.ByDate.Reverse }}
-            <div class="content markdown-body">
-              <ul class="blog-post-meta">
-                <li class="meta-item">
-                  {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
-                  {{ .Date.Format "Mon, Jan 2, 2006" }}
-                </li>
-                <!-- <li class="meta-item">
-                  {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
-                  {{ range .Params.author }} {{ . }}  {{ end }}
-                </li> -->
-              </ul>
-              <div class="blog-text">{{ .Content }}</div>
-            </div>
-            {{ partial "archives/operate-links.html" (dict "global" .) }}
-          {{ end }}
+    <div class="archive">
+      {{ range first 1 .Data.Pages.ByDate.Reverse }}
+        <div class="content markdown-body">
+          <ul class="blog-post-meta">
+            <li class="meta-item">
+              {{ partial "svgs/icon-date.svg" (dict "fill" "#040000" "width" 14 "height" 16 ) }}
+              {{ .Date.Format "Mon, Jan 2, 2006" }}
+            </li>
+            <!-- <li class="meta-item">
+              {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
+              {{ range .Params.author }} {{ . }}  {{ end }}
+            </li> -->
+          </ul>
+          <div class="blog-text">{{ .Content }}</div>
         </div>
+         {{ partial "archives/operate-links.html" (dict "global" .) }}
+      {{ end }}
     </div>
+  </div>
 </div>
 
 {{ end }}
