--- a/layouts/weekly/single.html
+++ b/layouts/weekly/single.html
@@ -6,7 +6,8 @@
 
 {{ define "main" }}
 <div class="blog">
-  <div class="container">
+  {{ partial "pre-loading/2-column-layout.html" }}
+  <div class="container content-container" style="display: none;">
     {{ $blogs := where (where .Site.Pages "Section" "weekly") ".Params.title" "!=" nil }}
     {{ partial "navs/date-tree-nav.html" (dict "title" "Weekly" "data" $blogs "rss" "/weekly/index.xml") }}
 
