--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -43,8 +43,8 @@
   }
 
   .sidebar-page {
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
 
     .improve-doc,
     .toc-title {
@@ -238,7 +238,7 @@
 
   .archive,
   .list {
-    padding-left: 40px;
+    padding-left: 3rem;
   }
 }
 // smarttoc-extender global
