feat: add git-info template

--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -25,6 +25,7 @@
           {{ .Content }}
         </div>
         <div class="article-toc"></div>
+        {{ partial "git-info.html" (dict "repo" "docs-cn" "isCn" "true" "global" .) }}
 
         {{ partial "archives/operate-links.html" (dict "global" . "isCn" "true") }}
     </div>
