--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -25,6 +25,8 @@
         {{ .Content }}
       </div>
       <div class="article-toc"></div>
+      {{ partial "git-info.html" (dict "repo" "docs" "global" .) }}
+
       {{ partial "archives/operate-links.html" (dict "global" .) }}
     </div>
 
