--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -245,6 +245,15 @@
 #smarttoc-extender {
   display: none !important;
 }
+.git-info {
+  margin: 25px 0;
+  font-size: 18px;
+
+  .commit-info {
+    color: @theme_blue;
+  }
+}
+
 @media (max-width: 600px) {
   .blog,
   .doc,
