polish: polish git-info style

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -177,6 +177,15 @@ h4 {
     Arial, sans-serif;
 }
 
+.link,
+.link:active,
+.link:focus,
+.link:hover,
+.link:link,
+.link:visited {
+  transition: color 0.15s ease-in;
+}
+
 .container {
   display: flex;
   max-width: @max_width_pc;
