--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -151,7 +151,7 @@
     }
 
     .operate {
-      margin-top: 1.6rem;
+      margin-top: 1.5rem;
       border-top: 2px solid #000;
       display: flex;
       flex-flow: row wrap;
@@ -222,6 +222,20 @@
       padding-left: calc(~'1.2rem - 2px');
     }
   }
+
+  .git-info {
+    margin-top: 2.5rem;
+    padding: 16px 14px;
+    background-color: rgba(27, 31, 35, 0.05);
+    font-size: 16px;
+    font-weight: 500;
+    color: @text_color;
+
+    a {
+      padding: 0 2px;
+      color: @theme_blue;
+    }
+  }
 }
 
 .blog,
@@ -244,14 +258,6 @@
 // smarttoc-extender global
 #smarttoc-extender {
   display: none !important;
-}
-.git-info {
-  margin: 25px 0;
-  font-size: 18px;
-
-  .commit-info {
-    color: @theme_blue;
-  }
 }
 
 @media (max-width: 600px) {
