feat: add mobile navigation sidebar for responsive header

--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -30,8 +30,10 @@
 
   {{ if $data_i18_cn }}
     {{ partial "header-cn" . }}
+    {{ partial "mobile-sidebar-cn" . }}
   {{ else }}
     {{ partial "header" . }}
+    {{ partial "mobile-sidebar" . }}
   {{ end }}
 
   {{ block "main" . }}{{ end }}
@@ -41,6 +43,8 @@
   {{ else }}
     {{ partial "footer" . }}
   {{ end }}
+
+  <div class="overlay"></div>
 
   <script src="https://download.pingcap.com/js/jquery.min.js"></script>
   {{ block "footjs" . }}{{ end }}
