--- a/layouts/partials/search/ui.html
+++ b/layouts/partials/search/ui.html
@@ -37,21 +37,23 @@
     }
 
     @media (max-width: 600px) {
-       .search-wrapper.show .algolia-autocomplete .ds-dropdown-menu {
-           position: fixed !important;
-           z-index: 100;
-           max-width: 340px !important;
-           min-width: 310px;
-           width: 100%;
-           top: 155px !important;
-           left: 50% !important;
-           right: auto !important;
-           transform: translateX(-50%);
-        }
+      .global-search .algolia-autocomplete .ds-dropdown-menu {
+        min-width: 360px !important;
+      }
 
-        .search-wrapper.show .algolia-autocomplete .ds-dropdown-menu [class^="ds-dataset-"] {
-          max-width: 100%;
-        }
+      .global-search .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu {
+         right: -36px !important;
+       }
+    }
+
+    @media (max-width: 360px) {
+      .global-search .algolia-autocomplete .ds-dropdown-menu {
+        min-width: 314px !important;
+      }
+
+      .global-search .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu {
+         right: -36px !important;
+       }
     }
 </style>
 
