--- a/layouts/partials/header-cn.html
+++ b/layouts/partials/header-cn.html
@@ -6,7 +6,7 @@
     <div class="nav-wrapper">
       <div class="navigations">
         <ul>
-          <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs-cn">文档</a></li>
+          <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs-cn/overview">文档</a></li>
           <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
           <!-- <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li> -->
           <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
@@ -21,9 +21,11 @@
         <div class="search-wrapper">
           <span class="icon-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 18 "height" 18 ) }}</span>
           {{ partial "search/ui.html" . }}
-          <!-- <button class="btn-cancel">{{ partial "svgs/icon-cross.svg" (dict "fill" "#fff" "width" 10 "height" 10 ) }}</button> -->
         </div>
       </div>
+    </div>
+    <div class="nav-btn nav-slider">
+      <i class="material-icons">{{ partial "svgs/icon-menu.svg" (dict "width" 16 "height" 16 ) }}</i>
     </div>
   </div>
 </header>
