polish: polish doc style in mobile

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -280,7 +280,7 @@
 
     .sidebar {
       flex: 100%;
-      padding-top: 140px;
+      padding-top: 100px;
       overflow: auto;
     }
 
@@ -292,5 +292,28 @@
       min-height: calc(~'100vh - 280px');
       overflow: auto;
     }
+  }
+
+  .blog,
+  .recruit,
+  .meetup {
+    .nav-tags {
+      padding-top: 50px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .blog .sidebar,
+  .blog .sidebar-page,
+  .doc .sidebar,
+  .doc .sidebar-page,
+  .meetup .sidebar,
+  .meetup .sidebar-page,
+  .recruit .sidebar,
+  .recruit .sidebar-page,
+  .weekly .sidebar,
+  .weekly .sidebar-page {
+    min-height: 100%;
   }
 }
