--- a/src/less/sidebar.less
+++ b/src/less/sidebar.less
@@ -6,7 +6,7 @@
 @title_color: #142848;
 @nav_bg_color: #fbfbfb;
 
- // width
+// width
 @sidebar_width: 12.5rem;
 
 // height
@@ -53,7 +53,7 @@
   .all {
     display: inline-block;
     padding: 3px 9px;
-    margin-left: -2px;
+    // margin-left: -2px;
     border: 1px solid #cdcdcd;
     font-size: 0.7rem;
     color: #333;
@@ -118,7 +118,7 @@
         margin-right: 0.3rem;
         width: 0.5rem;
         height: 0.5rem;
-        background-image: url("/images/icon-arrow-right.svg");
+        background-image: url('/images/icon-arrow-right.svg');
         background-size: 0.5rem 0.5rem;
       }
     }
@@ -127,7 +127,7 @@
       .icon {
         width: 0.5rem;
         height: 0.5rem;
-        background-image: url("/images/icon-arrow-down.svg");
+        background-image: url('/images/icon-arrow-down.svg');
         background-size: 0.5rem 0.5rem;
       }
     }
@@ -157,7 +157,7 @@
         margin-left: 0.3rem;
         width: 0.4rem;
         height: 0.4rem;
-        background-image: url("/images/icon-arrow-down.svg");
+        background-image: url('/images/icon-arrow-down.svg');
         background-size: 0.4rem 0.4rem;
       }
     }
