polish: polish footer and header

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -161,8 +161,12 @@
 
 //iPhone4、iPhone5、iPhone6
 @media (max-width: 600px) {
-  .footer .qr_code_outer {
-    left: 45%;
-    margin-top: -50%;
+  // .footer .qr_code_outer {
+  //   left: 45%;
+  //   margin-top: -50%;
+  // }
+  // TODO: sidebar
+  .footer {
+    display: none;
   }
 }
