--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -170,10 +170,10 @@
         display: flex;
         align-items: center;
         margin-top: 1rem;
-        font-size: 0.75rem;
+        font-size: 0.7rem;
 
         .icon {
-          margin-right: 0.5rem;
+          margin-right: 0.4rem;
         }
       }
     }
@@ -314,5 +314,66 @@
     .nav-tags {
       padding-top: 45px;
     }
+  }
+}
+
+@media (max-width: 320px) {
+  .blog .archive .operate .item a .icon,
+  .doc .archive .operate .item a .icon,
+  .meetup .archive .operate .item a .icon,
+  .recruit .archive .operate .item a .icon,
+  .weekly .archive .operate .item a .icon {
+    margin-right: 4px;
+  }
+}
+
+
+/**
+ * Print stylesheet for yourwebsite.com
+* @version         1.0
+* @lastmodified    16.06.2016
+*/
+
+@media print {
+  /* 把字体设置为16px/13pt, 把背景色设为纯白、字体纯黑，这样省墨。 */
+  body {
+    font: 13pt Georgia, "Times New Roman", Times, serif;
+    line-height: 1.3;
+    background: #fff !important;
+    color: #000;
+  }
+
+  h1 {
+    font-size: 24pt;
+  }
+
+  h2, h3, h4 {
+    font-size: 14pt;
+    margin-top: 25px;
+  }
+
+  /* 设置所有的分页符 */
+  a {
+    page-break-inside:avoid;
+  }
+  blockquote {
+    page-break-inside: avoid;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    page-break-after:avoid;
+    page-break-inside:avoid;
+  }
+  img {
+    page-break-inside:avoid;
+    page-break-after:avoid;
+  }
+  table, pre { page-break-inside:avoid; }
+  ul, ol, dl  { page-break-before:avoid; }
+
+  .header,
+  .footer,
+  .sidebar,
+  .sidebar-page {
+    display: none;
   }
 }
