polish: polish search box width in mobile device

--- a/layouts/partials/search/ui.html
+++ b/layouts/partials/search/ui.html
@@ -38,21 +38,31 @@
 
     @media (max-width: 600px) {
       .global-search .algolia-autocomplete .ds-dropdown-menu {
-        min-width: 360px !important;
+        min-width: 372px !important;
       }
 
       .global-search .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu {
-         right: -36px !important;
+         right: -42px !important;
        }
     }
 
-    @media (max-width: 360px) {
+    @media (max-width: 375px) {
+      .global-search .algolia-autocomplete .ds-dropdown-menu {
+        min-width: 350px !important;
+      }
+
+      .global-search .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu {
+         right: -45px !important;
+       }
+    }
+
+    @media (max-width: 320px) {
       .global-search .algolia-autocomplete .ds-dropdown-menu {
         min-width: 314px !important;
       }
 
       .global-search .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu {
-         right: -36px !important;
+         right: -48px !important;
        }
     }
 </style>
