polish: polish sidebar in mobile device

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -279,32 +279,25 @@
   .recruit,
   .weekly {
     .container {
-      flex-direction: column;
+      flex: none;
     }
 
     .archive,
     .list {
       max-width: 100%;
-      margin: 30px 0;
-      padding: 30px 5px;
+      margin: 20px 0;
+      padding: 25px 5px;
     }
 
     .sidebar {
       padding-top: 100px;
-      max-height: 100vh;
       max-width: 100%;
+      min-height: 100%;
       overflow: auto;
     }
 
     .sidebar .tag-list {
       margin-left: -5px;
-    }
-
-    &.blog,
-    &.recruit {
-      .sidebar {
-        min-height: 50vh;
-      }
     }
   }
 
@@ -313,6 +306,11 @@
   .meetup {
     .nav-tags {
       padding-top: 45px;
+    }
+
+    .archive,
+    .list {
+      margin-top: 60px;
     }
   }
 }
