--- a/src/less/header.less
+++ b/src/less/header.less
@@ -131,10 +131,13 @@ nav.mobile-sidebar {
 
   .nav-header {
     display: block;
-    // background-color: @bg_black_with_alpha90;
 
     .logo-wrap {
-      padding: 1rem 0.75rem;
+      padding: 0.6rem 0.75rem;
+
+      .nav-brand {
+        height: 30px;
+      }
 
       .logo-icon {
         display: inline-block;
@@ -169,7 +172,7 @@ nav.mobile-sidebar {
   }
 
   .ul-base {
-    margin: 1em 0;
+    margin: 10px 0;
 
     li {
       a:hover,
@@ -181,7 +184,7 @@ nav.mobile-sidebar {
       a {
         display: block;
         width: 100%;
-        padding: 0.5rem 0.75rem;
+        padding: 0.4rem 0.75rem;
         font-size: 16px;
       }
     }
@@ -367,9 +370,6 @@ nav.mobile-sidebar {
 
 @media only screen and (max-width: 320px) {
   .header {
-    .nav-brand {
-      height: 22px;
-    }
     .search-wrapper {
       width: 9rem;
     }
