polish: minor fix in doc.less

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -279,7 +279,7 @@
   .recruit,
   .weekly {
     .container {
-      flex: none;
+      display: block;
     }
 
     .archive,
@@ -294,6 +294,10 @@
       max-width: 100%;
       min-height: 100%;
       overflow: auto;
+    }
+
+    .sidebar-page {
+      min-height: 100%;
     }
 
     .sidebar .tag-list {
