feat: change footer template and style in PC

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,27 +1,58 @@
+{{ $data_i18_link := $.Scratch.Get "data_i18_link" }}
 <section class="footer" id="footer">
-  {{ $data_i18_link := $.Scratch.Get "data_i18_link" }}
-    <div class="container">
-        <div class="left">
-          <img src="/images/pingcap-logo.png" class="logo" alt="PingCAP">
-          <span class="copyright">&copy; 2017 PingCAP. All Rights Reserved.</span>
-          <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">中文</a>
-        </div>
-        <div class="right">
-            <div class="social-links">
-                <a href="mailto:info@pingcap.com" class="link_icon email">
-                  {{ partial "svgs/icon-mail.svg" }}
-                </a>
-                <a href="https://github.com/pingcap/tidb" class="link_icon github">
-                  {{ partial "svgs/icon-github-footer.svg" }}
-                </a>
-                <a href="https://twitter.com/PingCAP" class="link_icon twitter">
-                  {{ partial "svgs/icon-twitter.svg" }}
-                </a>
-                <a href="https://www.facebook.com/pingcap2015" class="link_icon facebook">
-                  {{ partial "svgs/icon-facebook.svg" }}
-                </a>
-            </div>
-            <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
-        </div>
+  <div class="container">
+    <div class="flex-list-wrap">
+      <div class="flex-list">
+        <h4 class="list-title"><strong>Product</strong></h4>
+        <ul>
+          <li><a href="https://pingcap.com/docs/overview/#tidb-introduction">TiDB</a></li>
+          <li><a href="https://pingcap.com/docs/tispark/tispark-user-guide/">TiSpark</a></li>
+          <li><a href="https://github.com/pingcap/docs/blob/master/ROADMAP.md">Roadmap</a></li>
+        </ul>
+      </div>
+      <div class="flex-list">
+        <h4 class="list-title"><strong>Docs</strong></h4>
+        <ul>
+          <li><a href="https://pingcap.com/docs/QUICKSTART/">Quick Start</a></li>
+          <li><a href="https://pingcap.com/blog/2017-07-24-tidbbestpractice/">Best Practices</a></li>
+          <li><a href="https://pingcap.com/docs/FAQ/">FAQ</a></li>
+          <li><a href="https://pingcap.com/docs/tools/syncer/">TiDB Utilities</a></li>
+          <li><a href="https://pingcap.com/docs/release/rn/">Release Notes</a></li>
+        </ul>
+      </div>
+      <div class="flex-list">
+        <h4 class="list-title"><strong>Resources</strong></h4>
+        <ul>
+          <li><a href="https://pingcap.com/blog/">Blog</a></li>
+          <li><a href="https://github.com/pingcap">GitHub</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dijsN0bddck">Tech Talks</a></li>
+        </ul>
+      </div>
+      <div class="flex-list">
+        <h4 class="list-title"><strong>Company</strong></h4>
+        <ul>
+          <li><a href="https://pingcap.com/about/">About</a></li>
+          <li><a href="https://pingcap.com/recruit/">Careers</a></li>
+          <li>Use Cases</li>
+          <li>Press</li>
+        </ul>
+      </div>
     </div>
+    <div class="contact-list-wrap">
+      <div class="flex-list">
+        <h4 class="list-title"><strong>Contact</strong></h4>
+        <ul>
+          <li><a href="https://twitter.com/PingCAP">Twitter</a></li>
+          <li><a href="https://www.reddit.com/r/TiDB/">Reddit</a></li>
+          <li><a href="https://groups.google.com/forum/#!forum/tidb-user">Google Group</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/tidb">Stack Overflow</a></li>
+        </ul>
+      </div>
+      <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
+    </div>
+  </div>
+  <div class="container">
+    <span class="copyright">&copy; 2017 PingCAP. All Rights Reserved.</span>
+    <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">中文</a>
+  </div>
 </section>
