--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -1,25 +1,60 @@
 {{ $data_i18_link := $.Scratch.Get "data_i18_link" }}
-<section class="footer">
-    <div class="container">
-        <div class="left">
-            <img class="logo" src="/images/pingcap-logo.png" alt="PingCAP">
-            <span class="copyright"> &copy; 2017 北京平凯星辰科技发展有限公司</span>
-            <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">English</a>
-        </div>
-        <div class="right">
-            <div class="social-links">
-                <a href="mailto:info@pingcap.com" class="link_icon email">
-                  {{ partial "svgs/icon-mail.svg" }}
-                </a>
-                <a href="javascript:;" class="link_icon wechat" id="wechat">
-                  {{ partial "svgs/icon-weixin.svg" }}
-                </a>
-                <a href="http://www.weibo.com/pingcap" class="link_icon weibo">
-                   {{ partial "svgs/icon-weibo.svg" }}
-                </a>
-            </div>
-            <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
-            {{ partial "qr-code.html" . }}
-        </div>
+<section class="footer" id="footer">
+  <div class="container">
+    <div class="flex-list-wrap">
+      <div class="flex-list">
+        <h4 class="list-title"><strong>产品</strong></h4>
+        <ul>
+          <li><a href="https://pingcap.com/docs-cn/overview/#tidb-%e7%ae%80%e4%bb%8b">TiDB</a></li>
+          <li><a href="https://pingcap.com/docs-cn/tispark/tispark-user-guide/">TiSpark</a></li>
+          <li><a href="https://github.com/pingcap/docs-cn/blob/master/ROADMAP.md">TiDB 路线图</a></li>
+        </ul>
+      </div>
+      <div class="flex-list">
+        <h4 class="list-title"><strong>文档</strong></h4>
+        <ul>
+          <li><a href="https://pingcap.com/docs-cn/QUICKSTART/">快速入门</a></li>
+          <li><a href="https://pingcap.com/blog-cn/tidb-best-practice/">最佳实践</a></li>
+          <li><a href="https://pingcap.com/docs-cn/FAQ/">常见问题解答</a></li>
+          <li><a href="https://pingcap.com/docs-cn/tools/syncer/">TiDB 周边工具</a></li>
+          <li><a href="https://pingcap.com/docs-cn/releases/README/">版本发布说明</a></li>
+        </ul>
+      </div>
+      <div class="flex-list">
+        <h4 class="list-title"><strong>资源</strong></h4>
+        <ul>
+          <li><a href="https://pingcap.com/blog-cn/">博客</a></li>
+          <li><a href="https://github.com/pingcap">GitHub</a></li>
+          <li><a href="https://zhuanlan.zhihu.com/newsql">知乎专栏</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dijsN0bddck">技术分享</a></li>
+        </ul>
+      </div>
+      <div class="flex-list">
+        <h4 class="list-title"><strong>公司</strong></h4>
+        <ul>
+          <li><a href="https://pingcap.com/about-cn/">关于</a></li>
+          <li><a href="https://pingcap.com/recruit-cn/">招贤纳士</a></li>
+          <li>用户案例</li>
+          <li>新闻媒体</li>
+        </ul>
+      </div>
     </div>
+    <div class="contact-list-wrap">
+      <div class="flex-list">
+        <h4 class="list-title"><strong>联系我们</strong></h4>
+        <ul>
+          <li><a href="https://twitter.com/PingCAP">Twitter</a></li>
+          <li><a href="https://www.reddit.com/r/TiDB/">Reddit</a></li>
+          <li><a href="https://groups.google.com/forum/#!forum/tidb-user">Google Group</a></li>
+          <li><a href="https://stackoverflow.com/questions/tagged/tidb">Stack Overflow</a></li>
+          <li id="wechat">微信公众号 {{ partial "qr-code.html" . }}</li>
+        </ul>
+      </div>
+      <div class="subscribe">{{ partial "mailchimp-js.html" . }}</div>
+    </div>
+  </div>
+  <div class="container">
+    <span class="copyright">&copy; 2017 北京平凯星辰科技发展有限公司</span>
+    <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="btn-lang" id="lang">English</a>
+  </div>
 </section>
