--- a/layouts/partials/mailchimp-js.html
+++ b/layouts/partials/mailchimp-js.html
@@ -1,7 +1,8 @@
 <!-- Begin MailChimp Signup Form -->
 <style type="text/css" media="screen">
     #mc_embed_signup .response {
-        margin-top: 10px;
+        margin-top: 12px;
+        line-height: 1.4;
         font-size: 14px;
     }
 </style>
