--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,10 +1,12 @@
 /* footer module */
 @import './base.less';
 //height
-@footer_height_pc: 200px;
-@input_height: 2rem;
+@footer_height_pc: 330px;
+@input_height: 36px;
 @pingcap_logo_height: 1.8rem;
-@btn_subscribe_width: 4.5rem;
+
+// width
+@btn_subscribe_width: 70px;
 
 /** add ellipsis in a line **/
 .footer {
@@ -14,73 +16,55 @@
   color: @white;
 
   .container {
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: baseline;
+    flex-wrap: wrap;
   }
 
-  .left,
-  .right {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1.1rem;
-  }
-
-  .left {
-    img {
-      height: @pingcap_logo_height;
-      margin-bottom: 1rem;
+  .flex-list {
+    h4 {
+      margin-bottom: 20px;
+      font-size: 18px;
     }
-  }
 
-  .copyright {
-    margin-bottom: 1rem;
-    font-size: 0.7rem;
-    font-weight: 300;
-    color: fade(@white, 80%);
-  }
+    ul {
+      padding-left: 0;
+      list-style: none;
 
-  .btn-lang {
-    padding: 2px 8px;
-    border: 1px solid @white;
-    .rounded-corners(2px);
-    line-height: 1.7;
-    font-size: 0.6rem;
-    color: @white;
+      li {
+        font-size: 14px;
+        line-height: 1.6;
+        margin-bottom: 8px;
+        color: rgba(255, 255, 255, 0.7);
+        font-weight: 300;
 
-    &:hover {
-      background-color: @white;
-      color: @theme_blue;
-      transition: all 0.5s ease;
-    }
-  }
-
-  .right {
-    position: relative;
-  }
-
-  .social-links {
-    display: flex;
-    flex-flow: row wrap;
-    .link_icon {
-      width: 26px;
-      height: 26px;
-      margin: 0 10px;
-      svg {
-        width: 26px;
-        height: 26px;
-        fill: @white;
+        a {
+          color: inherit;
+          font-weight: inherit;
+        }
       }
     }
   }
 
+  .flex-list-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    width: 74%;
+
+    .flex-list {
+      flex: calc(100%/ 4 - 1px);
+      padding: 0 0.75rem;
+    }
+  }
+
+  .contact-list-wrap {
+    width: 25%;
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    padding-left: 40px;
+  }
+
   .subscribe {
     width: 100%;
-    width: 15rem;
-    margin-top: 1.1rem;
-    // vertical-align: middle;
+    max-width: 13rem;
+    margin-top: 1.3rem;
 
     .form-inline {
       display: flex;
@@ -89,7 +73,6 @@
     }
 
     .form-control {
-      // float: left;
       width: calc(~'100% - '@btn_subscribe_width);
       height: @input_height;
       background-color: fade(@white, 12%);
@@ -97,7 +80,7 @@
       .rounded-corners(0);
       padding: 0 10px;
       color: @gray_white;
-      font-size: 0.7rem;
+      font-size: 12px;
 
       &:hover,
       &:focus {
@@ -105,27 +88,32 @@
       }
     }
     .btn {
-      // display: block;
       width: @btn_subscribe_width;
       height: @input_height;
       padding: 0 5px;
       .rounded-corners(0);
-      border: none;
+      border: 1px solid fade(@white, 0%);
       background-color: @theme_blue;
-      font-size: 0.8rem;
+      font-size: 12px;
       color: @white;
+      text-align: center;
       &:hover {
         background-color: @white;
+        border-color: @white;
         color: @theme_blue;
         transition: all 0.5s ease;
       }
     }
   }
 
+  #wechat {
+    position: relative;
+  }
+
   .qr_code_outer {
     position: absolute;
-    right: 130px;
-    margin-top: -90px;
+    right: 158px;
+    top: -100px;
     text-align: center;
     .qr_code_inner {
       .qr_code {
@@ -151,6 +139,24 @@
       }
     }
   }
+
+  .copyright {
+    padding: 0 0.75rem;
+    font-size: 0.7rem;
+    font-weight: 300;
+    color: fade(@white, 70%);
+  }
+
+  .btn-lang {
+    font-size: 0.7rem;
+    color: @white;
+    text-decoration: underline;
+
+    &:hover {
+      color: @theme_blue;
+      transition: all 0.5s ease;
+    }
+  }
 }
 
 @media (min-width: 600px) {
@@ -161,10 +167,6 @@
 
 //iPhone4、iPhone5、iPhone6
 @media (max-width: 600px) {
-  // .footer .qr_code_outer {
-  //   left: 45%;
-  //   margin-top: -50%;
-  // }
   // TODO: sidebar
   .footer {
     display: none;
